--- a/stock_trading_app/pubspec.yaml
+++ b/stock_trading_app/pubspec.yaml
@@ -31,6 +31,8 @@ dependencies:
     sdk: flutter
   web_socket_channel: ^2.1.0
   candlesticks: ^1.1.0
+  flutter_bloc:
+  equatable: ^2.0.3  
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
