--- a/stock_trading_app/pubspec.yaml
+++ b/stock_trading_app/pubspec.yaml
@@ -37,12 +37,13 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   http:
-  dartz: ^0.10.0
-  get_it: ^7.2.0
+  hive:
+  hive_flutter:
 dev_dependencies:
   flutter_test:
     sdk: flutter
-
+  hive_generator:
+  build_runner:
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
   # activated in the `analysis_options.yaml` file located at the root of your
